--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -104,7 +104,8 @@
     "rxjs": "*",
     "set-cookie-parser": "*",
     "@types/set-cookie-parser": "*",
-    "jwt-decode": "*"
+    "jwt-decode": "*",
+    "@tanstack/react-query": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
