--- a/libs/react/shelter-operator/.eslintrc.json
+++ b/libs/react/shelter-operator/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-  "extends": ["../../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*"],
+  "extends": ["plugin:@nx/react", "../../../.eslintrc.json"],
+  "ignorePatterns": ["**/__generated__/**"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
