--- a/libs/react/components/.eslintrc.json
+++ b/libs/react/components/.eslintrc.json
@@ -5,7 +5,8 @@
     "plugin:storybook/recommended"
   ],
   "ignorePatterns": [
-    "!**/*"
+    "!**/*",
+    "**/*.stories.tsx"
   ],
   "overrides": [
     {
