--- a/libs/react/icons/project.json
+++ b/libs/react/icons/project.json
@@ -5,5 +5,17 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project react-icons --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "libs/react/icons",
+        "command": "tsc --noEmit -p tsconfig.lib.json"
+      }
+    }
+  }
 }
