--- a/libs/react/shared/project.json
+++ b/libs/react/shared/project.json
@@ -21,6 +21,17 @@
       "outputs": [
         "{workspaceRoot}/libs/react/shared/src/lib/**/__generated__/"
       ]
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "libs/react/shared",
+        "command": "tsc --noEmit -p tsconfig.lib.json"
+      }
     }
   }
 }
