--- a/libs/react/components/.eslintrc.json
+++ b/libs/react/components/.eslintrc.json
@@ -4,32 +4,18 @@
     "../../../.eslintrc.json",
     "plugin:storybook/recommended"
   ],
-  "ignorePatterns": [
-    "!**/*",
-    "**/*.stories.tsx"
-  ],
+  "ignorePatterns": ["!**/*", "**/*.stories.tsx"],
   "overrides": [
     {
-      "files": [
-        "*.ts",
-        "*.tsx",
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {}
     },
     {
-      "files": [
-        "*.ts",
-        "*.tsx"
-      ],
+      "files": ["*.ts", "*.tsx"],
       "rules": {}
     },
     {
-      "files": [
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.js", "*.jsx"],
       "rules": {}
     }
   ]
