--- a/libs/react/shared/tsconfig.json
+++ b/libs/react/shared/tsconfig.json
@@ -6,7 +6,8 @@
     "allowJs": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": true,
+    "disableSourceOfProjectReferenceRedirect": true
   },
   "files": [],
   "include": [],
