[BP] Add entrypoint to shelter operator app (#1833)
* inital BA space

* add operator button

* gitignore .claude

* remove gitkeep

* Support empty GraphQL typegen for operator

* Add generated types

* Refactor Feater Flag code to be reused across the app

* More cleanup

* More feature flag cleanup

* Add linting and fix circular dependencies

* More cleanup

* ynx-generate

* Remove duplicate code

* More cleanup

* Fix lint

---------

Co-authored-by: Saahib Dhaliwal <saahibdeep333@gmail.com>
Co-authored-by: Paul Vecchio <paul@betterangels.la>

--- a/libs/react/components/.eslintrc.json
+++ b/libs/react/components/.eslintrc.json
@@ -4,31 +4,18 @@
     "../../../.eslintrc.json",
     "plugin:storybook/recommended"
   ],
-  "ignorePatterns": [
-    "!**/*"
-  ],
+  "ignorePatterns": ["!**/*", "**/*.stories.tsx"],
   "overrides": [
     {
-      "files": [
-        "*.ts",
-        "*.tsx",
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {}
     },
     {
-      "files": [
-        "*.ts",
-        "*.tsx"
-      ],
+      "files": ["*.ts", "*.tsx"],
       "rules": {}
     },
     {
-      "files": [
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.js", "*.jsx"],
       "rules": {}
     }
   ]
