--- a/libs/react/shelter/project.json
+++ b/libs/react/shelter/project.json
@@ -20,6 +20,10 @@
       "outputs": [
         "{workspaceRoot}/libs/react/shelter/src/lib/**/__generated__/"
       ]
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     }
   }
 }
