--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -106,7 +106,8 @@
     "@types/set-cookie-parser": "*",
     "jwt-decode": "*",
     "@preeternal/react-native-cookie-manager": "*",
-    "@tanstack/react-query": "*"
+    "@tanstack/react-query": "*",
+    "mime": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
