--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "jotai-family": "^1.0.1",
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.6",
-    "newrelic-react-native-agent": "^1.6.0",
+    "mime": "^4.1.0",
+    "newrelic-react-native-agent": "^1.5.10",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-fast-compare": "^3.2.2",
