--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@likashefqet/react-native-image-zoom": "^4.2.1",
     "@portabletext/react": "^3.2.0",
+    "@preeternal/react-native-cookie-manager": "^6.3.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "2.11.1",
@@ -76,7 +77,6 @@
     "react-native-keyboard-controller": "~1.19.6",
     "react-native-maps": "^1.26.20",
     "react-native-mmkv": "^4.1.0",
-    "react-native-nitro-cookies": "^1.0.0",
     "react-native-nitro-modules": "^0.33.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
