--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "~54.0.31",
+    "expo": "~54.0.33",
     "expo-application": "~7.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
@@ -45,13 +45,13 @@
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
-    "expo-font": "~14.0.10",
+    "expo-font": "~14.0.11",
     "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
-    "expo-router": "~6.0.19",
+    "expo-router": "~6.0.23",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "31.0.13",
@@ -64,7 +64,7 @@
     "jotai-family": "^1.0.1",
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.6",
-    "newrelic-react-native-agent": "^1.5.10",
+    "newrelic-react-native-agent": "^1.6.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-fast-compare": "^3.2.2",
@@ -172,7 +172,7 @@
     "babel-jest": "30.2.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-react-native-web": "^0.19.8",
-    "babel-preset-expo": "54.0.9",
+    "babel-preset-expo": "~54.0.10",
     "babel-preset-vite": "^1.1.3",
     "core-js": "3.36.1",
     "daisyui": "^5.0.46",
@@ -189,7 +189,7 @@
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "30.2.0",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "54.0.16",
+    "jest-expo": "~54.0.17",
     "jest-util": "30.2.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
