--- a/package.json
+++ b/package.json
@@ -220,6 +220,9 @@
     "vitest": "4.0.9"
   },
   "resolutions": {
+    "fast-xml-parser": "5.3.4",
+    "lodash": "4.17.23",
+    "tar": "7.5.7",
     "glob": ">=10.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
