React native autocomplete and move to new places apei

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -107,7 +107,8 @@
     "jwt-decode": "*",
     "@preeternal/react-native-cookie-manager": "*",
     "@tanstack/react-query": "*",
-    "mime": "*"
+    "mime": "*",
+    "react-native-google-places-autocomplete": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
