--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-native": "0.81.5",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-google-places-autocomplete": "^2.6.4",
     "react-native-keyboard-controller": "~1.19.6",
     "react-native-maps": "^1.26.20",
     "react-native-mmkv": "^4.1.0",
