--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "@types/apollo-upload-client": "^19.0.0",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.14",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^20.0.0",
     "@types/react": "~19.1.10",
     "@types/react-dom": "~19.1.7",
