--- a/apps/betterangels-backend/pyproject.toml
+++ b/apps/betterangels-backend/pyproject.toml
@@ -21,7 +21,7 @@ python = "3.14.2"
 psycopg = "^3.3.2"
 django = "^6.0.2"
 django-environ = "^0.12.0"
-gunicorn = {extras = ["gevent"], version = "^25.0.1"}
+gunicorn = {git = "https://github.com/benoitc/gunicorn.git", rev = "b19c648a67b119737b53ab12a141a93ba64f210b", extras = ["gevent"]}
 django-extensions = "^4.1"
 django-cors-headers = "^4.7.0"
 whitenoise = "^6.9.0"
