--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ unittest-parametrize = "^1.6.0"
 time-machine = "^3.2.0"
 types-python-dateutil = "^2.9.0.20260124"
 types-gevent = "^25.4.0.20250801"
+types-requests = "^2.32.0"
 pre-commit = "^4.3.1"
 
 
