--- a/apps/betterangels-backend/.env
+++ b/apps/betterangels-backend/.env
@@ -44,12 +44,11 @@ SECURE_HSTS_SECONDS=0
 SESSION_COOKIE_SECURE=False
 
 # Media
-MEDIA_URL=http://localhost:8000/media/
+MEDIA_URL=http://localhost:9000/betterangels-media/
 
-# S3 Test
-# AWS_S3_STORAGE_BUCKET_NAME=development-us-west-2-betterangels-backend
-# AWS_CLOUDFRONT_MEDIA_LOCATION=media
-# AWS_CLOUDFRONT_KEY_ID=K3DWLTNAECINDU
-# AWS_S3_CUSTOM_DOMAIN=cdn.dev.betterangels.la
-# AWS_S3_MEDIA_STORAGE_ENABLED=False
-# AWS_CLOUDFRONT_KEY=ssm:///ecs/betterangels-backend/AWS_CLOUDFRONT_KEY
+# S3 Storage (MinIO local dev)
+AWS_S3_MEDIA_STORAGE_ENABLED=True
+AWS_S3_STORAGE_BUCKET_NAME=betterangels-media
+AWS_S3_ENDPOINT_URL=http://localhost:9000
+AWS_S3_ACCESS_KEY_ID=minioadmin
+AWS_S3_SECRET_ACCESS_KEY=minioadmin
