--- a/apps/betterangels-backend/.env
+++ b/apps/betterangels-backend/.env
@@ -20,7 +20,10 @@ POST_OFFICE_EMAIL_BACKEND=django.core.mail.backends.filebased.EmailBackend
 # POST_OFFICE_EMAIL_BACKEND=django_ses.SESBackend
 
 # Allauth
+# Enable login by OTP code
 ACCOUNT_LOGIN_BY_CODE_ENABLED=True
+# OTP code expiration timeout in seconds (default: 300 = 5 minutes)
+ACCOUNT_LOGIN_BY_CODE_TIMEOUT=300
 
 # Google Maps
 GOOGLE_MAPS_API_KEY="<GOOGLE_MAPS_API_KEY>"
