--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,7 +49,8 @@
         "monosans.djlint",
         "matangover.mypy",
         "eamodio.gitlens",
-        "GraphQL.vscode-graphql"
+        "GraphQL.vscode-graphql",
+        "ms-vsliveshare.vsliveshare"
       ]
     }
   },
