--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -108,7 +108,11 @@
     "@preeternal/react-native-cookie-manager": "*",
     "@tanstack/react-query": "*",
     "mime": "*",
-    "react-native-google-places-autocomplete": "*"
+    "react-native-google-places-autocomplete": "*",
+    "react-router-dom": "*",
+    "clsx": "*",
+    "tailwind-merge": "*",
+    "lodash": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
