--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,9 @@
         "libs/expo/shared/clients/src/index.ts"
       ],
       "@monorepo/expo/shared/icons": ["libs/expo/shared/icons/src/index.ts"],
+      "@monorepo/expo/shared/services": [
+        "libs/expo/shared/services/src/index.ts"
+      ],
       "@monorepo/expo/shared/static": ["libs/expo/shared/static/src/index.ts"],
       "@monorepo/expo/shared/ui-components": [
         "libs/expo/shared/ui-components/src/index.ts"
