--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -43,7 +43,8 @@
       "@monorepo/react/shelter-operator": [
         "libs/react/shelter-operator/src/index.ts"
       ],
-      "@monorepo/react/storybook": ["libs/react/storybook/src/index.ts"]
+      "@monorepo/react/storybook": ["libs/react/storybook/src/index.ts"],
+      "@monorepo/shared/places": ["libs/shared/places/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
