--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,8 +49,7 @@
         "monosans.djlint",
         "matangover.mypy",
         "eamodio.gitlens",
-        "GraphQL.vscode-graphql",
-        "ms-vsliveshare.vsliveshare"
+        "GraphQL.vscode-graphql"
       ]
     }
   },
