--- a/libs/react/shelter-operator/tsconfig.lib.json
+++ b/libs/react/shelter-operator/tsconfig.lib.json
@@ -9,6 +9,8 @@
     "src/**/*.spec.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.tsx",
-    "src/**/*.test.tsx"
+    "src/**/*.test.tsx",
+    "src/**/*.stories.ts",
+    "src/**/*.stories.tsx"
   ]
 }
