--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,4 +32,5 @@
   "python.testing.pytestArgs": ["apps", "libs"],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
+  "python.analysis.autoImportCompletions": true
 }
