refactor: consolidate Map component into shared lib\n\nMove Map component, types, constants, utils, and controls from\napps/shelter-web into libs/react/components for reuse across apps.\nAlso move CurrentLocation component (Map control dependency).\n\nUpdate all shelter-web imports to use @monorepo/react/components.\nAdd google.maps to components lib tsconfig types.\nRemove unused map dependency from useCallback."

--- a/libs/react/components/tsconfig.lib.json
+++ b/libs/react/components/tsconfig.lib.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"],
+    "types": ["node", "google.maps"],
     "composite": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
