--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ types-python-dateutil = "^2.9.0.20260124"
 types-gevent = "^25.4.0.20250801"
 types-requests = "^2.32.0"
 pre-commit = "^4.3.1"
+virtualenv = "^20.38.0"
 
 
 [tool.pytest.ini_options]
