--- a/libs/react/components/tsconfig.lib.json
+++ b/libs/react/components/tsconfig.lib.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
     "declaration": true,
-    "types": ["node", "google.maps"],
+    "types": ["node"],
     "composite": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
