Try this with modules

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -113,6 +113,11 @@
     "lodash": "*",
     "haversine-distance": "*"
   },
+  "expo": {
+    "autolinking": {
+      "nativeModulesDir": "../../modules"
+    }
+  },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
     "eas-build-post-install": "cd ../../ && node tools/scripts/eas-build-post-install.mjs . apps/betterangels",
