Under libs please

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -115,7 +115,7 @@
   },
   "expo": {
     "autolinking": {
-      "nativeModulesDir": "../../modules"
+      "nativeModulesDir": "../../libs/expo/modules"
     }
   },
   "scripts": {
