--- a/libs/expo/modules/signing-fingerprint/android/build.gradle
+++ b/libs/expo/modules/signing-fingerprint/android/build.gradle
@@ -7,5 +7,7 @@ android {
   namespace "org.betterangels.signingfingerprint"
   defaultConfig {
     minSdkVersion 21
+    versionCode 1
+    versionName "1.0.0"
   }
 }
